refactor: remove redundant ledger fetch and modernize LedgerService
- inviteUser called findByIdWithLock then findById again to obtain the
  same Ledger object; reuse the already-locked result to save one query
- Replace Collectors.toList() with .toList() in buildLedgerResponse
  (Java 16+ unmodifiable list, consistent with the rest of the codebase)
- Remove now-unused Collectors import